@@ -88,22 +88,31 @@
     <Image Include="resources\application.png" />
     <Image Include="resources\application_get.bmp" />
     <Image Include="resources\application_get.png" />
+    <Image Include="resources\application_get_modern.png" />
     <Image Include="resources\application_go.bmp" />
     <Image Include="resources\application_go.png" />
+    <Image Include="resources\application_go_modern.png" />
+    <Image Include="resources\application_modern.png" />
     <Image Include="resources\arrow_refresh.bmp" />
     <Image Include="resources\arrow_refresh.png" />
+    <Image Include="resources\arrow_refresh_modern.png" />
     <Image Include="resources\chart_line.bmp" />
     <Image Include="resources\chart_line.png" />
+    <Image Include="resources\chart_line_modern.png" />
     <Image Include="resources\cog_edit.bmp" />
     <Image Include="resources\cog_edit.png" />
+    <Image Include="resources\cog_edit_modern.png" />
     <Image Include="resources\cross.bmp" />
     <Image Include="resources\cross.png" />
+    <Image Include="resources\cross_modern.png" />
     <Image Include="resources\find.bmp" />
     <Image Include="resources\find.png" />
+    <Image Include="resources\find_modern.png" />
     <Image Include="resources\inactive_search.bmp" />
     <Image Include="resources\inactive_search.png" />
     <Image Include="resources\lightbulb_off.bmp" />
     <Image Include="resources\lightbulb_off.png" />
+    <Image Include="resources\lightbulb_off_modern.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
 </Project>
