@@ -41,6 +41,7 @@
 #define SETTING_NAME_ENABLE_TOOLBAR (PLUGIN_NAME L".EnableToolBar")
 #define SETTING_NAME_ENABLE_SEARCHBOX (PLUGIN_NAME L".EnableSearchBox")
 #define SETTING_NAME_ENABLE_STATUSBAR (PLUGIN_NAME L".EnableStatusBar")
+#define SETTING_NAME_ENABLE_MODERNICONS (PLUGIN_NAME L".EnableModernIcons")
 #define SETTING_NAME_ENABLE_RESOLVEGHOSTWINDOWS (PLUGIN_NAME L".ResolveGhostWindows")
 #define SETTING_NAME_ENABLE_STATUSMASK (PLUGIN_NAME L".StatusMask")
 #define SETTING_NAME_TOOLBARBUTTONCONFIG (PLUGIN_NAME L".ToolbarButtonConfig")
